--- a/css/style.css
+++ b/css/style.css
@@ -110,7 +110,7 @@ header .contenedor .contenedor-menu .menu a:hover{
 }
 
 .home .contenedor .contenedor-tarjeta  .redes-sociales{
-    margin: 30px 0;
+    margin: 15px 0;
     display: flex;
     justify-content: center;
         
@@ -123,8 +123,6 @@ header .contenedor .contenedor-menu .menu a:hover{
     border-radius: 10px;
     width: 50px;  
     text-align: center;
-    
-    
     margin: 0 10px;
     padding: 10px;
 
@@ -139,4 +137,99 @@ header .contenedor .contenedor-menu .menu a:hover{
 }
 .home .contenedor .contenedor-tarjeta  .redes-sociales .linkedin:hover{
     background: #0077b5;
+}
+
+.sobre-mi{
+    margin-top: 40px;
+    
+    padding: 20px;
+}
+
+.sobre-mi .contenedor .presentacion{
+    text-align: center;
+}
+
+.sobre-mi .contenedor .presentacion h3{
+    text-align: center;
+    font-size: 20px;
+}
+
+.sobre-mi .contenedor .presentacion i{
+    font-size: 40px;
+}
+
+.sobre-mi .contenedor .contenedor-detalle{
+    display: flex;
+    flex-direction: row;
+    justify-content:space-between;
+    margin-top: 40px;
+}
+
+.sobre-mi .contenedor .contenedor-detalle .detalle-personal{
+    display: flex;
+}
+.sobre-mi .contenedor .contenedor-detalle .detalle-personal .rta{
+    margin-top: 46px;
+    margin-left: 25px;
+}
+
+.sobre-mi .contenedor .contenedor-detalle .detalle-personal .rta p .verde{
+    background-color: #34c6a1;
+    padding: 0 10px;
+    border-radius: 40px;
+}
+
+.sobre-mi .contenedor .contenedor-detalle .detalle-personal .prg p{
+    color: #34c6a1;
+}
+
+.sobre-mi .contenedor .contenedor-detalle .mis-intereses .cont .contenedor-iconos{
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+text-align: center;
+flex-wrap: wrap;
+}
+
+.sobre-mi .contenedor .contenedor-detalle .mis-intereses .cont .contenedor-iconos i {
+font-size: 32px;
+text-align: center;
+margin-top: 20px;
+
+}
+.linea{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+.sobre-mi .contenedor .boton{
+    text-align: center;
+    margin-top: 40px;
+}
+
+.sobre-mi .contenedor .boton button{
+    border-radius: 15px;
+    padding: 5px 10px;
+}
+
+.sobre-mi .contenedor .boton button:hover{
+    background: #34c6a1;
+    color: white;
+}
+
+.sobre-mi .contenedor .contenedor-detalle .detalle-personal, .mis-intereses{
+    width: 50%;
+}
+
+.skill .contenedor .skill{
+    display: flex;
+    flex-direction: row;
+}
+
+.skill .contenedor .skill .columna-1, .columna-2{
+    width: 50%;
+    margin:10px 10px;
 }
