--- a/css/style.sass
+++ b/css/style.sass
@@ -30,6 +30,7 @@ body
                     margin: 200px 0 
                     background: #000
                     color: #fff
+                    
                     .row
                         .contenedor-imagen
                             margin-top: -175px
@@ -51,7 +52,38 @@ body
                             text-align: center 
                     .row
                         .contenedor-redes-sociales
-                            
+                            padding: 20px 0
+                            .container
+                                .row
+                                    .contenedor-red
+                                        display: flex
+                                        justify-content: center
+                                        align-items: center
+                                        .insta:hover
+                                            background: linear-gradient(70deg, #515bd4, #dd2a7b)
+                                            i
+                                                
+                                                color:#fff  
+                                        .what:hover
+                                            background: #25D366
+                                            i
+                                                
+                                                color:#fff   
+                                        .linkedin:hover
+                                            background: #0077b5
+                                            i
+                                                
+                                                color:#fff   
+                                        a
+                                            background: #000
+                                            padding: 10px 13px 
+                                            border-radius: 10px
+                                            i
+                                                font-size: 35px
+                                                color: #fff
+                                        
+                                        
+                                             
 
 
 
