--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,6 @@ body {
 body header {
   background: #000;
 }
-body header .opciones {
-  padding: 25px 0;
-}
 body header .opciones .logo p {
   color: #66c8b1;
   font-size: 32px;
@@ -19,8 +16,9 @@ body header .opciones .nave {
 }
 body header .opciones .nave a {
   color: #fff;
-  margin-left: 60px;
-  font-size: 18px;
+  margin-left: 25px;
+  font-size: 16px;
+  text-decoration: none;
 }
 body main {
   background: url(../img/fondo.jpeg);
@@ -33,9 +31,12 @@ body main .container .row {
   justify-content: center;
 }
 body main .container .row .contenedor-tarjeta {
-  margin: 200px 0;
+  min-width: 300px;
+  margin-top: 200px;
+  margin-bottom: 60px;
   background: #000;
   color: #fff;
+  border-radius: 10px;
 }
 body main .container .row .contenedor-tarjeta .row .contenedor-imagen {
   margin-top: -175px;
@@ -85,10 +86,24 @@ body main .container .row .contenedor-tarjeta .row .contenedor-redes-sociales .c
 }
 body main .container .row .contenedor-tarjeta .row .contenedor-redes-sociales .container .row .contenedor-red a {
   background: #000;
-  padding: 10px 13px;
-  border-radius: 10px;
+  padding: 15px;
+  border-radius: 100%;
 }
 body main .container .row .contenedor-tarjeta .row .contenedor-redes-sociales .container .row .contenedor-red a i {
   font-size: 35px;
   color: #fff;
+}
+body .sobre-mi .container {
+  padding: 40px 0;
+}
+body .sobre-mi .container .icono {
+  display: flex;
+  justify-content: center;
+}
+body .sobre-mi .container .icono .contenedor-icono {
+  text-align: center;
+}
+body .sobre-mi .container .icono .contenedor-icono i {
+  color: #3b5998;
+  font-size: 35px;
 }/*# sourceMappingURL=style.css.map */
