--- a/css/style.sass
+++ b/css/style.sass
@@ -4,7 +4,7 @@ body
     header
         background: #000   
         .opciones
-            padding: 25px 0
+            
             .logo
                 p
                   color: #66c8b1
@@ -15,8 +15,10 @@ body
                  line-height: 50px
                  a
                      color: #fff
-                     margin-left: 60px
-                     font-size: 18px
+                     margin-left: 25px
+                     font-size: 16px
+                     text-decoration: none
+                     
     main
         background: url(../img/fondo.jpeg)
         background-size: cover
@@ -27,9 +29,12 @@ body
                 display: flex
                 justify-content: center
                 .contenedor-tarjeta
-                    margin: 200px 0 
+                    min-width: 300px
+                    margin-top: 200px
+                    margin-bottom: 60px
                     background: #000
                     color: #fff
+                    border-radius:10px 
                     
                     .row
                         .contenedor-imagen
@@ -42,7 +47,7 @@ body
                                 border-radius: 50%
                                 padding: 0 0
                                 img
-                                    width: 300px
+                                    width: 300px               
                                     border-radius: 50%
                                     border: solid   10px #66c8b1
                                     margin: 0 
@@ -59,29 +64,42 @@ body
                                         display: flex
                                         justify-content: center
                                         align-items: center
+                                        
                                         .insta:hover
                                             background: linear-gradient(70deg, #515bd4, #dd2a7b)
-                                            i
-                                                
+                                            i  
                                                 color:#fff  
                                         .what:hover
                                             background: #25D366
-                                            i
-                                                
+                                            i 
                                                 color:#fff   
                                         .linkedin:hover
                                             background: #0077b5
-                                            i
-                                                
+                                            i   
                                                 color:#fff   
                                         a
                                             background: #000
-                                            padding: 10px 13px 
-                                            border-radius: 10px
+                                            padding: 15px 
+                                            border-radius: 100%
+                                            
                                             i
                                                 font-size: 35px
                                                 color: #fff
-                                        
+    .sobre-mi
+        .container
+            padding:40px 0
+            .icono
+                display: flex
+                justify-content: center            
+                .contenedor-icono
+                    text-align: center
+                    i
+                        color: #3b5998
+                        font-size: 35px
+                    
+                    
+
+
                                         
                                              
 
