--- a/css/style.sass
+++ b/css/style.sass
@@ -35,6 +35,7 @@ body
                     background: #000
                     color: #fff
                     border-radius:10px 
+                    border: solid 5px rgba(50,100,90,2)
                     
                     .row
                         .contenedor-imagen
@@ -43,18 +44,22 @@ body
                             justify-content: center
                             
                             .contorno
-                                border: solid   35px rgba(50,100,90,2)
+                                border: solid   30px rgba(50,100,90,2)
                                 border-radius: 50%
                                 padding: 0 0
                                 img
-                                    width: 300px               
+                                    width: 275px               
                                     border-radius: 50%
                                     border: solid   10px #66c8b1
                                     margin: 0 
                     .row
                          .contenedor-titulo
                             padding: 20px 0
-                            text-align: center 
+                            text-align: center
+                            h1
+                                font-size: 36px
+                            h2
+                                font-size: 24px 
                     .row
                         .contenedor-redes-sociales
                             padding: 20px 0
@@ -77,26 +82,80 @@ body
                                             background: #0077b5
                                             i   
                                                 color:#fff   
+                                        .git:hover
+                                            background: #fff
+                                            i   
+                                                color:#000000  
                                         a
                                             background: #000
-                                            padding: 15px 
+                                            padding:13px 15px 12px 15px
                                             border-radius: 100%
+                                            text-align: center
+                                            justify-content: center
+                                            
                                             
                                             i
                                                 font-size: 35px
                                                 color: #fff
     .sobre-mi
+        color: #fff
+        background: #000
         .container
             padding:40px 0
             .icono
                 display: flex
-                justify-content: center            
+                justify-content: center
+                padding-bottom: 40px            
                 .contenedor-icono
+                
                     text-align: center
                     i
-                        color: #3b5998
+                        color: #3a72ea
                         font-size: 35px
-                    
+            .presentacion
+                
+                text-align: center
+                padding-bottom: 40px
+                p
+                    font-size: 18px
+            .datos
+                .detalles-personales
+                    .contenedor-sub
+                        text-align: left
+                        padding-bottom: 10px
+                    .contenedor-detalles
+                        
+                        .preguntas
+                            text-align: left
+                            p
+                                margin-left: 15px
+                        .respuestas
+                            text-align: left
+                            .verde
+                                background: #66c8b1
+                                border-radius: 30px
+                                padding: 0 10px
+                                font-size: 18px
+                                padding-bottom: 2px 
+                                font-weight: 600
+                            .amarillo
+                                background: #e1e172
+                                border-radius: 30px
+                                padding: 0 10px
+                                font-size: 18px
+                                padding-bottom: 2px 
+                                font-weight: 500
+
+                .mis-intereses
+                    .intereses-sub
+                        text-align: left
+                        padding-bottom: 10px
+                .contenedor-icon
+                    text-align: center
+                    background: #1d1d1d
+                               
+
+
                     
 
 
