--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ body main .container .row .contenedor-tarjeta {
   min-width: 300px;
   margin-top: 200px;
   margin-bottom: 60px;
-  background: #000;
+  background: #151515;
   color: #fff;
   border-radius: 10px;
   border: solid 5px rgb(50, 100, 90);
@@ -203,4 +203,61 @@ body .sobre-mi .container .boton-cv .contenedor-btn a {
 body .sobre-mi .container .boton-cv .contenedor-btn a:hover {
   background: #66c8b1;
   color: #fff;
+}
+body .skill {
+  padding: 40px 0;
+  color: #fff;
+  background: #151515;
+}
+body .skill .skill-div {
+  display: flex;
+  justify-content: center;
+}
+body .skill .skill-div .contenedor-skill {
+  padding-bottom: 20px;
+  text-align: center;
+}
+body .skill .skill-div .contenedor-skill i {
+  color: #3a72ea;
+  font-size: 35px;
+}
+body .skill .skill-div-2 .blandas .blandas-sub .col {
+  text-align: center;
+}
+body .skill .skill-div-2 .blandas .iconos-habilidades {
+  padding-left: 20px;
+}
+body .skill .skill-div-2 .blandas .iconos-habilidades .contenedor-skill {
+  text-align: center;
+  background: #1d1d1d;
+  width: 90%;
+  margin: 10px 0;
+  border-radius: 20px;
+  padding: 5px;
+}
+body .skill .skill-div-2 .blandas .iconos-habilidades .contenedor-skill i {
+  font-size: 22px;
+  padding-bottom: 10px;
+  margin-top: 10px;
+  color: #FFF;
+}
+body .skill .skill-div-2 .blandas .iconos-habilidades .contenedor-skill p {
+  padding-bottom: 5px;
+}
+body .proyectos {
+  padding: 40px 0;
+  color: #fff;
+  background: #000;
+}
+body .proyectos .row .col {
+  display: flex;
+  justify-content: center;
+}
+body .proyectos .row .col .contenedor-proyectos {
+  padding-bottom: 20px;
+  text-align: center;
+}
+body .proyectos .row .col .contenedor-proyectos i {
+  color: #3a72ea;
+  font-size: 35px;
 }/*# sourceMappingURL=style.css.map */
