--- a/css/style.sass
+++ b/css/style.sass
@@ -1,7 +1,7 @@
 $color-principal:#66c8b1
 $color-secundario:rgba(50,100,90,2)
 $color-fondo:#000
-$color-fondo-secundario:#1d1d1d
+$color-fondo-secundario:#151515
     
 body
     font-size: 16px
@@ -23,7 +23,9 @@ body
                     color: #fff
                     margin-left: 25px
                     font-size: 16px
-                    text-decoration: none        
+                    text-decoration: none
+                
+
                      
     main
         background: url(../img/fondo.jpeg)
@@ -38,7 +40,7 @@ body
                     min-width: 300px
                     margin-top: 200px
                     margin-bottom: 60px
-                    background: #000
+                    background: $color-fondo-secundario
                     color: #fff
                     border-radius:10px 
                     border: solid 5px rgba(50,100,90,2)
@@ -191,8 +193,59 @@ body
                     a:hover
                        background: $color-principal
                        color: #fff
-
+    .skill
+        padding: 40px 0
+        color: #fff
+        background: $color-fondo-secundario
+        .skill-div
+            display: flex
+            justify-content: center
+            .contenedor-skill
+                padding-bottom: 20px
+                text-align: center
+                i
+                    color: #3a72ea
+                    font-size: 35px
+        .skill-div-2
+            
+            .blandas
+                
+                .blandas-sub
                     
+                    .col
+                        text-align: center
+                .iconos-habilidades
+                    padding-left: 20px
+                    .contenedor-skill
+                        text-align: center
+                        background: #1d1d1d
+                        width: 90%
+                        margin: 10px 0
+                        border-radius:20px
+                        padding:5px
+                        i
+                            
+                            font-size: 22px
+                            padding-bottom: 10px
+                            margin-top: 10px
+                            color: #FFF
+                        p
+                            padding-bottom: 5px
+    .proyectos
+        padding: 40px 0
+        color: #fff
+        background: $color-fondo
+        .row
+            .col
+                display: flex
+                justify-content: center
+                .contenedor-proyectos
+                    padding-bottom: 20px
+                    text-align: center
+                    i
+                        color: #3a72ea
+                        font-size: 35px
+
 
 
                                         
